# flask-web-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
web/: app.py  measurements.py  people.py  swagger.yml
web/static/css/: bootstrap.5.3.2.min.css
web/static/js/: exit.js  index.js
web/templates/: base.html.j2  index.html.j2
