[tool.poetry]
name = "webpage"
version = "0.1.0"
description = "webpage"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
connexion = {extras = ["flask", "swagger-ui", "uvicorn"], version = "^3.0.5"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
